Add function to send mail, not working for now

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "bugs": {
         "url": "https://github.com/MinecraftForgeFrance/nodebb-plugin-contact-page/issues"
     },
-    "homepage": "https://github.com/MinecraftForgeFrance/nodebb-plugin-contact-page#readme"
+    "homepage": "https://github.com/MinecraftForgeFrance/nodebb-plugin-contact-page#readme",
+    "dependencies": {
+        "simple-recaptcha-new": "^1.1.1"
+    }
 }
