--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nodebb-plugin-contact-page",
-    "version": "0.0.2",
+    "version": "1.0.0",
     "description": "A nodeBB plugin to a contact page",
     "main": "library.js",
     "repository": {
@@ -18,5 +18,8 @@
     "homepage": "https://github.com/MinecraftForgeFrance/nodebb-plugin-contact-page#readme",
     "dependencies": {
         "simple-recaptcha-new": "^1.1.1"
+    },
+    "nbbpm": {
+        "compatibility": "^1.9.0 || ^1.10.0"
     }
 }
