--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nodebb-plugin-contact-page",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "description": "A nodeBB plugin to a contact page",
     "main": "library.js",
     "repository": {
@@ -20,6 +20,6 @@
         "simple-recaptcha-new": "^1.1.1"
     },
     "nbbpm": {
-        "compatibility": "^1.9.0 || ^1.10.0 || ^1.11.0"
+        "compatibility": "^1.14.0"
     }
 }
